[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-cli"
version = "1.0.0"
description = "A command-line interface for Perplexity AI with improved error handling and API key management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Michael Freiberg", email = "your.email@example.com"},
]
keywords = ["perplexity", "ai", "cli", "api", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/dawid-szewc/perplexity-cli"
"Bug Reports" = "https://github.com/dawid-szewc/perplexity-cli/issues"
Source = "https://github.com/dawid-szewc/perplexity-cli"

[project.scripts]
perplexity = "perplexity_improved:main"

[tool.setuptools]
py-modules = ["perplexity_improved"]